# pga-marketplace

./: .gitignore  README.md  SESSION-RESUME.md  mockup-portfolio-dash-v2.html
.claude-plugin/: marketplace.json
plugins/initiative-dashboards/: README.md
plugins/initiative-dashboards/.claude-plugin/: plugin.json
plugins/initiative-dashboards/desktop-bridge/: README.md  claude_desktop_config.snippet.json  mcp_server.py  pyproject.toml  refresh.py  snapshot.py
plugins/initiative-dashboards/skills/building-initiative-dashboard/: SKILL.md
plugins/initiative-dashboards/skills/building-initiative-dashboard/reference/: dashboard-template.html  data-sources.md  rag-rules.md
plugins/initiative-dashboards/skills/building-portfolio-dashboard/: SKILL.md
plugins/initiative-dashboards/skills/building-portfolio-dashboard/reference/: portfolio-template.html
plugins/scrum-ceremonies/.claude-plugin/: plugin.json
plugins/scrum-ceremonies/skills/building-sprint-review/: SKILL.md
plugins/scrum-ceremonies/skills/building-sprint-review/reference/: data-sources.md  presentation-template.html  report-template.md
tests/fixtures/dashboards/: items-early-stage.json  items-mid-flight.json  items-sequencing-risk.json  portfolio-mixed.json
tests/skills/building-initiative-dashboard/: activation.yml  effectiveness.yml
tests/skills/building-initiative-dashboard/incremental-merge/: _lib.py  test_merge.py  test_removal.py  test_savings.py
tests/skills/building-portfolio-dashboard/: activation.yml  effectiveness.yml
tests/skills/building-sprint-review/: activation.yml
(+2 files in other folders)
